SUBDIRS = libexpat

CLEANFILES = *.~* *.~~* *~

EXTRA_DIST = \
	ulxmlrpcpp.bpg \
	base64.bpf \
	base64.bpr \
	resource.bpf \
	resource.bpr \
	http_client.bpf \
	http_client.bpr \
	http_server.bpf \
	http_server.bpr \
	https_client.bpf \
	https_client.bpr \
	https_server.bpf \
	https_server.bpr \
	https_cert_client.bpf \
	https_cert_client.bpr \
	https_cert_server.bpf \
	https_cert_server.bpr \
	httpfunc.bpf \
	httpfunc.bpr \
	introspect.bpf \
	introspect.bpr \
	meerkat_client.bpf \
	meerkat_client.bpr \
	rpc_client.bpf \
	rpc_client.bpr \
	rpc_server.bpf \
	rpc_server.bpr \
	mt_client.bpf \
	mt_client.bpr \
	mt_server.bpf \
	mt_server.bpr \
	ulxmlrpcpp.bpf \
	ulxmlrpcpp.bpr \
	ulxmlrpcpp_contrib.bpf \
	ulxmlrpcpp_contrib.bpr \
	val1_client.bpf \
	val1_client.bpr \
	val1_server.bpf \
	val1_server.bpr \
	secure_client.bpf \
	secure_client.bpr \
	secure_server.bpf \
	secure_server.bpr \
	xmlfunc.bpf \
	xmlfunc.bpr \
	set_age.sh \
	gen-bpr.bat

