EXTRA_DIST = \
	expat.dsp \
	expat.dsw \
	base64.dsp \
	https_server.dsp \
	https_client.dsp \
	http_client.dsp \
	http_server.dsp \
	httpfunc.dsp \
	introspect.dsp \
	meerkat_client.dsp \
	rpc_client.dsp \
	rpc_server.dsp \
	ulxmlrpcpp.dsp \
	ulxr_msvc.dsw \
	resource.dsp \
	val1_client.dsp \
	val1_server.dsp \
	mt_client.dsp \
	mt_server.dsp \
	secure_client.dsp \
	secure_server.dsp \
	wbxmlfunc.dsp \
	xmlbench.dsp \
	xmlfunc.dsp

CLEAN_FILES = *.plg ulxmlrpcpp.opt *.ncb *.dep *.~* *.~~* *~


