EXTRA_DIST = \
	expat.vcproj \
	expat.sln \
	base64.vcproj \
	https_server.vcproj \
	https_client.vcproj \
	http_client.vcproj \
	http_server.vcproj \
	httpfunc.vcproj \
	introspect.vcproj \
	meerkat_client.vcproj \
	rpc_client.vcproj \
	rpc_server.vcproj \
	ulxmlrpcpp.vcproj \
	resource.vcproj \
	ulxmlrpcpp_contrib.vcproj \
	ulxr_msvc71.sln \
	val1_client.vcproj \
	val1_server.vcproj \
	mt_client.vcproj \
	mt_server.vcproj \
	secure_client.vcproj \
	secure_server.vcproj \
	wbxmlfunc.vcproj \
	xmlbench.vcproj \
	xmlfunc.vcproj \
	xml2ulxr.vcproj \
	ulxr2xml.vcproj

CLEAN_FILES = *.plg ulxmlrpcpp.opt *.ncb *.dep *.~* *.~~* *~


